# src/main/java/gabia/cronMonitoring/controller/AuthController.java
@@ -1,16 +1,17 @@
 package gabia.cronMonitoring.controller;
 
-import gabia.cronMonitoring.dto.request.RefreshTokenDTO;
 import gabia.cronMonitoring.dto.request.UserInfoDTO;
 import gabia.cronMonitoring.dto.response.AccessTokenDTO;
 import gabia.cronMonitoring.jwt.JwtFilter;
-import gabia.cronMonitoring.service.AuthService;
+import gabia.cronMonitoring.jwt.AuthService;
 import gabia.cronMonitoring.service.UserService;
 import javax.validation.Valid;
+import javax.validation.constraints.NotBlank;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpHeaders;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.web.bind.annotation.PathVariable;
 import org.springframework.web.bind.annotation.PostMapping;
 import org.springframework.web.bind.annotation.RequestBody;
 import org.springframework.web.bind.annotation.RequestMapping;
@@ -18,7 +19,7 @@ import org.springframework.web.bind.annotation.RestController;
 
 @RestController
 @RequiredArgsConstructor
-@RequestMapping("auth")
+@RequestMapping("/auth")
 public class AuthController {
 
     private final AuthService authService;
@@ -28,7 +29,7 @@ public class AuthController {
     @PostMapping("/local/login")
     public ResponseEntity<AccessTokenDTO> login(@Valid @RequestBody UserInfoDTO request) {
 
-        AccessTokenDTO tokenDTO = authService.login(request);
+        AccessTokenDTO tokenDTO = authService.authorize(request);
 
         HttpHeaders httpHeaders = new HttpHeaders();
         httpHeaders.add(JwtFilter.AUTHORIZATION_HEADER, "Bearer " + tokenDTO.getToken());
@@ -37,8 +38,8 @@ public class AuthController {
     }
 
     @PostMapping("/local/logout")
-    public ResponseEntity<String> logout(@Valid @RequestBody RefreshTokenDTO request) {
-        authService.logout(request);
+    public ResponseEntity<String> logout(@Valid @RequestBody UserInfoDTO request) {
+        authService.unauthorize(request.getAccount());
         return new ResponseEntity("Refresh Token Deleted Successfully!", HttpStatus.OK);
     }
 
@@ -46,5 +47,11 @@ public class AuthController {
     public ResponseEntity<AccessTokenDTO> register(@Valid @RequestBody UserInfoDTO request) {
         gabia.cronMonitoring.dto.response.UserInfoDTO userInfoDTO = userService.addUser(request);
         return new ResponseEntity(userInfoDTO, HttpStatus.CREATED);
+    }
+
+    @PostMapping("/local/refresh-token/{userAccount}")
+    public ResponseEntity<AccessTokenDTO> refreshToken(@NotBlank @PathVariable(name = "userAccount") String userAccount) {
+        AccessTokenDTO accessTokenDTO = authService.refreshAccessToken(userAccount);
+        return new ResponseEntity(accessTokenDTO, HttpStatus.CREATED);
     }
 }
