# src/main/java/gabia/cronMonitoring/dto/request/RefreshTokenDTO.java
@@ -1,17 +1,0 @@
-package gabia.cronMonitoring.dto.request;
-
-import javax.validation.constraints.NotBlank;
-import lombok.AllArgsConstructor;
-import lombok.Builder;
-import lombok.Data;
-import lombok.NoArgsConstructor;
-
-@AllArgsConstructor
-@NoArgsConstructor
-@Builder
-@Data
-public class RefreshTokenDTO {
-    @NotBlank
-    private String refreshToken;
-    private String userAccount;
-}
