# swagger.yaml
@@ -15,6 +15,8 @@ servers:
     description: '카프카 로컬 접속'
   - url: 'http://182.162.142.151:9093'
     description: '카프카 운영환경 접속'
+  - url: 'http://localhost:6379'
+    description: '레디스 리프레시 토큰 DB'
 
 paths:
   /auth/local/login:
@@ -45,6 +47,23 @@ paths:
       responses:
         '200':
           description: '로그아웃 성공'
+        '400':
+          description: 'Bad request'
+  /auth/local/refresh-token/{userAccount}:
+    post:
+      summary: '사용자 Access token 재발급'
+      operationId: refreshToken
+      tags:
+        - authentication
+      parameters:
+        - $ref: '#/components/parameters/userIdPath'
+      responses:
+        '201':
+          description: '재발급 성공'
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/AccessToken'
         '400':
           description: 'Bad request'
   /auth/register:
